[package]
authors = [
    "Anthony DiMarco <ocramida@gmail.com>",
    "Jimmy Cuadra <jimmy@jimmycuadra.com>",
    "Matthew Mayer <matthewkmayer@gmail.com>",
    "Nikita Pekin <contact@nikitapek.in>"
]
build = "build.rs"
description = "AWS SDK for Rust - Core"
documentation = "https://docs.rs/rusoto_core"
keywords = ["AWS", "Amazon"]
license = "MIT"
name = "rusoto_core"
readme = "README.md"
repository = "https://github.com/rusoto/rusoto"
version = "0.48.0"
homepage = "https://www.rusoto.org/"
exclude = ["test_resources/*"]
edition = "2018"

[build-dependencies]
rustc_version = "0.4"

[dependencies]
async-trait = "0.1.9"
bytes = "1.0"
crc32fast = "1.2"
futures = "0.3"
http = "0.2"
hyper = { git = "https://github.com/wasix-org/hyper.git", branch = "v0.14.28", features = ["client", "http1", "http2", "tcp"] }
lazy_static = "1.4"
log = "0.4"
base64 = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { git = "https://github.com/wasix-org/tokio.git", branch = "wasix-1.35.1", features = ["time", "io-util"] }
xml-rs = "0.8"
flate2 = { version = "1.0", optional = true }

[dependencies.rusoto_credential]
path = "../credential"
version = "0.48.0"

[dependencies.rusoto_signature]
path = "../signature"
version = "0.48.0"

[dev-dependencies]
tokio = { git = "https://github.com/wasix-org/tokio.git", branch = "wasix-1.35.1", features = ["macros"] }
env_logger = "0.7"
rand = "0.7"
serde_json = "1.0.1"
serde_test = "1.0.1"

[features]
default = []
encoding = ["flate2"]
nightly-testing = ["rusoto_credential/nightly-testing"]
unstable = []

[package.metadata.docs.rs]
targets = []
