[package]
name = "credential_service_mock"
version = "0.48.0"
authors = ["Matthew Mayer <matthewkmayer@gmail.com>"]
edition = "2018"

[dependencies]
hyper = { vgit = "https://github.com/wasix-org/hyper.git", branch = "v0.14.28", features = ["http1", "server", "tcp"] }
tokio = { git = "https://github.com/wasix-org/tokio.git", branch = "wasix-1.35.1", features = ["macros", "rt-multi-thread"] }
