[package]
authors = ["Anthony DiMarco <ocramida@gmail.com>", "Jimmy Cuadra <jimmy@jimmycuadra.com>", "Matthew Mayer <matthewkmayer@gmail.com>", "Nikita Pekin <contact@nikitapek.in>"]
description = "AWS SDK for Rust - AWS CloudTrail @ 2013-11-01"
documentation = "https://docs.rs/rusoto_cloudtrail"
keywords = ["AWS", "Amazon", "cloudtrail"]
license = "MIT"
name = "rusoto_cloudtrail"
readme = "README.md"
repository = "https://github.com/rusoto/rusoto"
version = "0.48.0"
homepage = "https://www.rusoto.org/"
edition = "2018"
exclude = ["test_resources/*"]
[package.metadata.docs.rs]
targets = []

[build-dependencies]

[dependencies]
async-trait = "0.1"
bytes = "1.0"
serde_json = "1.0"

[dependencies.futures]
version = "0.3"

[dependencies.rusoto_core]
version = "0.48.0"
path = "../../core"
default-features = false

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dev-dependencies]
tokio = { git = "https://github.com/wasix-org/tokio.git", branch = "wasix-1.35.1" }

[dev-dependencies.rusoto_mock]
version = "0.48.0"
path = "../../../mock"
default-features = false

[features]
default = []
deserialize_structs = ["bytes/serde"]
serialize_structs = ["bytes/serde"]
